#
# Makefile.am - Copyright (c) 2001-2023 - Olivier Poncet
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>
#

# ----------------------------------------------------------------------------
# bitmaps resources
# ----------------------------------------------------------------------------

bitmapsdir = $(datadir)/@PACKAGE@/bitmaps

dist_bitmaps_DATA = \
	xcpc-icon.png \
	xcpc-mask.png \
	eject.png \
	eject.xbm \
	empty.png \
	empty.xbm \
	folder-open.png \
	folder-open.xbm \
	info-circle.png \
	info-circle.xbm \
	pause.png \
	pause.xbm \
	play.png \
	play.xbm \
	power-off.png \
	power-off.xbm \
	question.png \
	question.xbm \
	question-circle.png \
	question-circle.xbm \
	save.png \
	save.xbm \
	sync.png \
	sync.xbm \
	$(NULL)

# ----------------------------------------------------------------------------
# End-Of-File
# ----------------------------------------------------------------------------
