#
# Makefile.am - Copyright (c) 2001-2021 - Olivier Poncet
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>
#

# ----------------------------------------------------------------------------
# pixmaps resources
# ----------------------------------------------------------------------------

pixmapsdir = $(datadir)/@PACKAGE@/pixmaps

dist_pixmaps_DATA = \
	xcpc-icon.xpm \
	xcpc-mask.xpm \
	eject.xpm \
	empty.xpm \
	folder-open.xpm \
	info-circle.xpm \
	pause.xpm \
	play.xpm \
	power-off.xpm \
	question-circle.xpm \
	save.xpm \
	sync.xpm \
	$(NULL)

# ----------------------------------------------------------------------------
# End-Of-File
# ----------------------------------------------------------------------------
